--- a/SundayTimeTable/pom.xml
+++ b/SundayTimeTable/pom.xml
@@ -17,97 +17,122 @@
     <jackson.version>2.9.4</jackson.version>
     <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
     <spring-context.version>5.0.2.RELEASE</spring-context.version>
+    <hibernate.version>5.2.13.Final</hibernate.version>
   </properties>
 
   <dependencies>
   
   <!-- LOMBOK -->
-  	<dependency>
-    	<groupId>org.projectlombok</groupId>
-    	<artifactId>lombok</artifactId>
-    	<version>${lombok.version}</version>
-    	<scope>provided</scope>
-	</dependency>
+   <dependency>
+     <groupId>org.projectlombok</groupId>
+     <artifactId>lombok</artifactId>
+     <version>${lombok.version}</version>
+     <scope>provided</scope>
+ </dependency>
   
   <!-- JSON -->
-  	<dependency>
-    	<groupId>com.fasterxml.jackson.core</groupId>
-    	<artifactId>jackson-databind</artifactId>
-    	<version>${jackson.version}</version>
-	</dependency>
-	
+   <dependency>
+     <groupId>com.fasterxml.jackson.core</groupId>
+     <artifactId>jackson-databind</artifactId>
+     <version>${jackson.version}</version>
+ </dependency>
+ 
   <!-- SPRING-BOOT -->
-  	<dependency>
-    	<groupId>org.springframework.boot</groupId>
-    	<artifactId>spring-boot-autoconfigure</artifactId>
-    	<version>${spring-boot.version}</version>
-	</dependency>
+   <dependency>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-autoconfigure</artifactId>
+     <version>${spring-boot.version}</version>
+ </dependency>
   
-  	<dependency>
+   <dependency>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-starter</artifactId>
+     <version>${spring-boot.version}</version>
+ </dependency>
+   <dependency>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-starter-test</artifactId>
+     <version>${spring-boot.version}</version>
+     <scope>test</scope>
+ </dependency>
+   
+   <dependency>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-starter-web</artifactId>
+     <version>${spring-boot.version}</version>
+    </dependency>
+    
+    <dependency>
     	<groupId>org.springframework.boot</groupId>
-    	<artifactId>spring-boot-starter</artifactId>
-    	<version>${spring-boot.version}</version>
-	</dependency>
-  	<dependency>
-    	<groupId>org.springframework.boot</groupId>
-    	<artifactId>spring-boot-starter-test</artifactId>
-    	<version>${spring-boot.version}</version>
-    	<scope>test</scope>
-	</dependency>
-  	<dependency>
-    	<groupId>org.springframework.boot</groupId>
-    	<artifactId>spring-boot-starter-web</artifactId>
+    	<artifactId>spring-boot-starter-data-jpa</artifactId>
     	<version>${spring-boot.version}</version>
     </dependency>
-	 
+    
   <!-- SPRING-CONTEXT -->
-  	<dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-context</artifactId>
-    	<version>${spring-context.version}</version>
-	</dependency>
-  	
-  	<dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-core</artifactId>
-    	<version>${spring-context.version}</version>
-	</dependency>
-  	<dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-web</artifactId>
-    	<version>${spring-context.version}</version>
-	</dependency>
-  	<dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-webmvc</artifactId>
-    	<version>${spring-context.version}</version>
-	</dependency>
-	
-	<!-- SPRING DATA -->
+   <dependency>
+     <groupId>org.springframework</groupId>
+     <artifactId>spring-context</artifactId>
+     <version>${spring-context.version}</version>
+ </dependency>
+   
+   <dependency>
+     <groupId>org.springframework</groupId>
+     <artifactId>spring-core</artifactId>
+     <version>${spring-context.version}</version>
+ </dependency>
+   <dependency>
+     <groupId>org.springframework</groupId>
+     <artifactId>spring-web</artifactId>
+     <version>${spring-context.version}</version>
+ </dependency>
+   <dependency>
+     <groupId>org.springframework</groupId>
+     <artifactId>spring-webmvc</artifactId>
+     <version>${spring-context.version}</version>
+ </dependency>
+ 
+ <!-- SPRING DATA -->
+ <dependency>
+     <groupId>org.springframework.data</groupId>
+     <artifactId>spring-data-commons</artifactId>
+     <version>1.13.7.RELEASE</version>
+ </dependency>
+  <dependency>
+     <groupId>org.springframework.data</groupId>
+     <artifactId>spring-data-jpa</artifactId>
+     <version>1.11.7.RELEASE</version>
+ </dependency>
+  <dependency>
+     <groupId>org.springframework.data</groupId>
+     <artifactId>spring-data-commons-core</artifactId>
+     <version>1.4.1.RELEASE</version>
+ </dependency>
+ 
+ <!-- JDBC DRIVER -->
 	<dependency>
-    	<groupId>org.springframework.data</groupId>
-    	<artifactId>spring-data-commons</artifactId>
-    	<version>1.13.7.RELEASE</version>
+    	<groupId>com.h2database</groupId>
+    	<artifactId>h2</artifactId>
+    	<version>1.4.196</version>
 	</dependency>
-	
 	<dependency>
-    	<groupId>org.springframework.data</groupId>
-    	<artifactId>spring-data-jpa</artifactId>
-    	<version>1.11.7.RELEASE</version>
+    	<groupId>postgresql</groupId>
+    	<artifactId>postgresql</artifactId>
+    	<version>9.1-901-1.jdbc4</version>
 	</dependency>
-	
 	<dependency>
-    	<groupId>org.springframework.data</groupId>
-    	<artifactId>spring-data-commons-core</artifactId>
-    	<version>1.4.1.RELEASE</version>
+    	<groupId>com.microsoft.sqlserver</groupId>
+    	<artifactId>mssql-jdbc</artifactId>
+    	<version>6.4.0.jre8</version>
+    	<scope>test</scope>
 	</dependency>
 	
+	<!-- HIKARI -->
 	<dependency>
     	<groupId>com.zaxxer</groupId>
     	<artifactId>HikariCP-java9ea</artifactId>
     	<version>2.6.1</version>
 	</dependency>
-	
+  
    	<!-- JUNIT -->
     <dependency>
       <groupId>junit</groupId>
@@ -116,10 +141,32 @@
       <scope>test</scope>
     </dependency>
 
+	<!-- HIBERNATE -->
     <dependency>
-    	<groupId>org.springframework.boot</groupId>
-    	<artifactId>spring-boot-starter-data-jpa</artifactId>
-    	<version>1.5.9.RELEASE</version>
-    </dependency>
+    	<groupId>org.hibernate</groupId>
+    	<artifactId>hibernate-core</artifactId>
+    	<version>${hibernate.version}</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>org.hibernate</groupId>
+    	<artifactId>hibernate-entitymanager</artifactId>
+    	<version>${hibernate.version}</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>org.hibernate.javax.persistence</groupId>
+    	<artifactId>hibernate-jpa-2.0-api</artifactId>
+    	<version>1.0.1.Final</version>
+	</dependency>
+	
+	<!-- MOCKITO -->
+	<dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-all</artifactId>
+    	<version>1.10.19</version>
+    	<scope>test</scope>
+	</dependency>
+	
   </dependencies>
 </project>
