--- a/SundayTimeTable/src/main/resources/hibernate.properties
+++ b/SundayTimeTable/src/main/resources/hibernate.properties
@@ -1,8 +1,8 @@
-hibernate.connection.driver_class=org.h2.Driver
-hibernate.connection.url=jdbc:h2:~/weekend_timeteble
-hibernate.connection.username=alex
-hibernate.connection.password=12345
-hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.connection.driver_class=com.microsoft.sqlserver.jdbc.SQLServerDriver
+hibernate.connection.url=jdbc:sqlserver://localhost:1433;databaseName=TimeTableDB
+hibernate.connection.username=TimeTableUser
+hibernate.connection.password=TTUser-40bfb3f200
+hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
 hibernate.format_sql=true
